--- a/NEWS
+++ b/NEWS
@@ -57,6 +57,9 @@ Geany 1.27 (unreleased)
       legacy counterparts `scintilla_send_message()`, `scintilla_get_type()`
       and `scintilla_new()` (Thomas Martitz, PR#874).
 
+    Windows
+    * Project->Open Font now respects the native dialog setting (PR#961).
+
 
 Geany 1.26 (November 15, 2015)
 
